# compmath_lab1

./: .~lock.lab1_compmath.docx#  Cargo.toml  lab1_compmath.docx  test.json  test1.json  test2.json
src/: alg_eq.rs  env_args.rs  formating.rs  input.rs  main.rs
