[package]
name = "lab1_comp_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.4"
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
inquire = "0.6.2"
libmath = "0.2.1"